# my-raylib-game-template

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  PreLoad.cmake
src/: Makefile.Android  exiter.cpp  exiter.h  exiter.hpp  game.cpp  game.h  game.hpp  raylib_game.cpp
src/states/: logo_state.cpp  menu_state.cpp  play_state.cpp  state.cpp  state_manager.cpp  state_manager.h  state_manager.hpp  states.h  states.hpp
